fix dark mode

--- a/docs/.vuepress/styles/palette.scss
+++ b/docs/.vuepress/styles/palette.scss
@@ -3,8 +3,6 @@
     --c-tip: #30bcd5;
 
     --c-bg: #f6f6f6;
-    --c-bg-navbar: #f6f6f6;
-    --c-tip-bg: #f0f0f0;
     --c-bg-light: #f0f0f0;
 }
 
